Modernize the connection traversal for Java 21
Language and library level only, over the files issue #3037 created or updated:
CreateConnectionsSwitch, the internal traversal package, and the test support
and characterization tests that go with them. No behavior changes; the whole
reactor passes with coverage and SpotBugs, and the scoped coverage of the
traversal package is unchanged at 91.0% line and 85.9% branch.

The two seed dispatches, in CreateConnectionsSwitch.instantiateAcrossFirst()
and PathAssembler.join(), become pattern switches over the sealed TraversalSeed
hierarchy, so a seed kind added later cannot silently fall through an else-if
chain and resolve no legs. The boundary case uses a when guard rather than a
nested conditional. The one remaining ternary-with-cast, which decided the
component a leg descends into, is a pattern switch as well.

var replaces the type on about 150 locals where the initializer already says
the type or the type does not matter: constructors, factory calls, getters, and
enhanced-for variables. It is deliberately not used where the declared type is
the information, in particular where List.of() or newSetFromMap() carry no type
of their own and where a local holds an EMF eGet() result.

Java 21 sequenced collections replace index arithmetic: getFirst() and
getLast() for a leg's first and last segment, and reversed() for the member
chain LeafExpansion collects inner to outer. PathMaterializer.narrow() drops
two casts for instanceof patterns, LeafExpansion pairs the members of two
feature groups by index instead of walking two iterators, PathKeys builds a key
by concatenation rather than with a StringBuilder, and the two keyed sorts in
LegResolver are streams that still compute each key once.

Two private methods left behind by the source-first removal, an unused
mode-transition-trigger test and an unused connection-ending-category test, are
deleted with the imports that only they needed. CreateConnectionsSwitch loses
its remainin